--- a/1RTTKEMTLS/Cargo.toml
+++ b/1RTTKEMTLS/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "handshake"
 version = "0.1.0"
-authors = ["simonpc <simon_leb_5@hotmail.com>"]
-edition = "2018"
+authors = ["Simon Rastikian <simon.rastikian@gmail.com>"]
+license = "not sure what to put"
+readme = "README.md"
+description = "One Round trip KEMTLS protocol"
+homepage = "https://github.com/AbuLSim/1RTT-KEMTLS"
+repository = "https://github.com/AbuLSim/1RTT-KEMTLS"
+categories = ["tls", "cryptography"]
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
